--- a/docs/Element/.02_element.md
+++ b/docs/Element/.02_element.md
@@ -120,7 +120,7 @@ There are three methods available to create 1D elements:
 
 A nested class within Element used to create truss elements.
 
-#### Attributes
+### Object Attributes
 
 `ID`: Element ID  
 `TYPE`: Element type = <font color="red">'TRUSS'</font>  
@@ -130,7 +130,8 @@ A nested class within Element used to create truss elements.
 `ANGLE`: Beta angle of the truss element  
 
 
-To create truss element we have total 3 methods :  
+To create truss element we have total 3 methods : 
+
 
 ### 1. Truss
 **<font color="green">`Element.Truss(i:int, j:int, mat = 1, sect = 1, angle = 0, id = 0)`</font>**  
@@ -204,9 +205,9 @@ Element.create()
 
 A nested class within Element used to create Beam elements.
 
-#### Attributes
+### Object Attributes
 
-`ID`: Element ID  
+`ID`: Element IDs  
 `TYPE`: Element type = <font color="red">'BEAM'</font>  
 `MATL`: Material ID of the beam element  
 `SECT`: Section ID of the beam element  
@@ -227,6 +228,7 @@ Creates a Beam between nodes `i` and `j`.
 * `sect (default=1)`: Section ID of the Beam element
 * `angle (default=0)`: Beta angle of the Beam element
 * `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
+
 
 #### Examples
 ```py
