--- a/docs/Element/1D.md
+++ b/docs/Element/1D.md
@@ -21,7 +21,7 @@ http://localhost:8000/Element/1D/
 
 A nested class within Element used to create truss elements.
 
-#### Attributes
+### Object Attributes
 
 `ID`: Element ID  
 `TYPE`: Element type = <font color="red">'TRUSS'</font>  
@@ -105,7 +105,7 @@ Element.create()
 
 A nested class within Element used to create Beam elements.
 
-#### Attributes
+### Object Attributes
 
 `ID`: Element ID  
 `TYPE`: Element type = <font color="red">'BEAM'</font>  
