--- a/docs/Element/2D.md
+++ b/docs/Element/2D.md
@@ -7,7 +7,7 @@
 
 A nested class within Element used to create Plate elements.
 
-#### Attributes
+### Object Attributes
 
 `ID`: Element ID  
 `TYPE`: Element type = <font color="red">'PLATE'</font>  
@@ -16,6 +16,7 @@ A nested class within Element used to create Plate elements.
 `NODE`: Nodes of element in list. eg: [1,2,3,4]   
 `ANGLE`: Beta angle of the beam element  
 `STYPE`: Type of Plate element  
+
 &emsp;&emsp;&emsp;&emsp;1 : Thick <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
 2 : Thin  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
 3 : Thick w Drilling dof  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
