--- a/docs/Group/001sg.md
+++ b/docs/Group/001sg.md
@@ -15,6 +15,11 @@ Creates a structure group with specified name and optional node/element lists.
 #### Class Attributes
 *Group.Structure.Groups* -> List of all structure groups.  
 
+### Object Attributes
+* `NAME` (str): The name of the structure group.
+* `ID` (int): The ID of the structure group.
+* `ELIST` (list): A list of element numbers belonging to this group.
+* `NLIST` (list): A list of node numbers belonging to this group.
 
 
 ### Methods
