--- a/docs/Group/002bg.md
+++ b/docs/Group/002bg.md
@@ -13,7 +13,9 @@ Creates a boundary group with specified name.
 #### Class Attributes
 *Group.Boundary.Groups* -> List of all boundary groups.  
 
-
+### Object Attributes
+* `NAME` (str): The name of the boundary group.
+* `ID` (int): The ID of the boundary group.
 
 
 
