--- a/docs/Group/003lg.md
+++ b/docs/Group/003lg.md
@@ -13,7 +13,9 @@ Creates a load group with specified name.
 #### Class Attributes
 *Group.Load.Groups* -> List of all load groups.  
 
-
+### Object Attributes
+* `NAME` (str): The name of the load group.
+* `ID` (int): The ID of the load group.
 
 
 ## Methods
