--- a/docs/Group/004tg.md
+++ b/docs/Group/004tg.md
@@ -13,7 +13,9 @@ Creates a tendon group with specified name.
 ### Class Attributes
 *Group.Tendon.Groups* -> List of all tendon groups. 
 
-
+### Object Attributes
+* `NAME` (str): The name of the tendon group.
+* `ID` (int): The ID of the tendon group.
 
 ## Methods
 
