--- a/docs/Load/000sw.md
+++ b/docs/Load/000sw.md
@@ -13,8 +13,12 @@ Creates a self-weight load for the specified load case.
 * `value (default=-1)`: Magnitude of self-weight (can be int or list [FX, FY, FZ])
 * `load_group (default="")`: Load group name
 
-
-
+### Object Attributes
+* `LC` (str): The name of the load case.
+* `DIR` (str): The direction of the self-weight ("X", "Y", or "Z").
+* `FV` (list): A list of three floats representing the load factors in X, Y, and Z directions.
+* `LG` (str): The name of the load group.
+* `ID` (int): The ID of the self-weight load entry.
 
 
 ## Methods
