--- a/docs/Element/1D.md
+++ b/docs/Element/1D.md
@@ -178,6 +178,143 @@ Node.create()
 Element.create()
 ```
 
+----------------------------------------------------------------------------------------------------
+
+
+
+## TENSION
+
+A nested class within Element used to create tension-only elements, hooks, and cables.
+
+### Object Attributes
+
+`ID`: Element ID  
+`TYPE`: Element type = <font color="red">'TENSTR'</font>  
+`MATL`: Material ID of the tension element  
+`SECT`: Section ID of the tension element  
+`NODE`: Nodes of element in list. eg: [1,2]   
+`ANGLE`: Beta angle of the tension element  
+`STYPE`: Subtype of tension element (1=Tension-only, 2=Hook, 3=Cable)  
+
+### Tension Element
+**<font color="green">`Element.Tension(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, id = 0, non_len = None, cable_type = None, tens = None, t_limit = None)`</font>**  
+Creates a tension element between nodes `i` and `j`.
+
+#### Parameters
+* `i`: Node ID of i-th end
+* `j`: Node ID of j-th end
+* `stype`: Tension element subtype (1=Tension-only, 2=Hook, 3=Cable)
+* `mat (default=1)`: Material ID of the tension element
+* `sect (default=1)`: Section ID of the tension element
+* `angle (default=0)`: Beta angle of the tension element
+* `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.
+* `non_len (default=None)`: Non-linear length parameter for Hook/Cable
+* `cable_type (default=None)`: Cable type for stype=3 (1=Pretension, 2=Horizontal, 3=Lu)
+* `tens (default=None)`: Initial tension force or allowable compression
+* `t_limit (default=None)`: Tension limit value
+
+#### Examples
+```py
+Node(0,0,0)    # Create Node at 0,0,0 with ID = 1(default)
+Node(1,1,1)    # Create Node at 1,1,1 with ID = 2(default)
+
+# Simple tension-only member
+tension1 = Element.Tension(1,2,stype=1)
+
+# Tension-only with allowable compression and tension limit
+tension2 = Element.Tension(1,2,stype=1,tens=0.5,t_limit=-15)
+
+# Hook element with slack length
+hook1 = Element.Tension(3,4,stype=2,non_len=0.5)
+
+# Cable with initial tension and catenary effects
+cable1 = Element.Tension(5,6,stype=3,cable_type=3,tens=1000.0,non_len=0.1)
+
+Node.create()
+Element.create()
+```
+
+### Subtypes
+
+#### 1. Tension-only (stype=1)
+- Transfers tension forces only
+- Can have allowable compression (`tens` parameter)
+- Can have tension limit (`t_limit` parameter)
+
+#### 2. Hook (stype=2)
+- Has slack length defined by `non_len` parameter
+- Only active when stretched beyond slack length
+
+#### 3. Cable (stype=3)
+- Supports catenary analysis
+- Requires `cable_type` parameter
+- Can have initial tension and slack length
+
+
+
+----------------------------------------------------------------------------------------------------
+
+
+
+## COMPRESSION
+
+A nested class within Element used to create compression-only elements and gaps.
+
+### Object Attributes
+
+`ID`: Element ID  
+`TYPE`: Element type = <font color="red">'COMPTR'</font>  
+`MATL`: Material ID of the compression element  
+`SECT`: Section ID of the compression element  
+`NODE`: Nodes of element in list. eg: [1,2]   
+`ANGLE`: Beta angle of the compression element  
+`STYPE`: Subtype of compression element (1=Compression-only, 2=Gap)  
+
+### Compression Element
+**<font color="green">`Element.Compression(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, id = 0, tens = None, t_limit = None, non_len = None)`</font>**  
+Creates a compression element between nodes `i` and `j`.
+
+#### Parameters
+* `i`: Node ID of i-th end
+* `j`: Node ID of j-th end
+* `stype`: Compression element subtype (1=Compression-only, 2=Gap)
+* `mat (default=1)`: Material ID of the compression element
+* `sect (default=1)`: Section ID of the compression element
+* `angle (default=0)`: Beta angle of the compression element
+* `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.
+* `tens (default=None)`: Allowable tension or initial compression force
+* `t_limit (default=None)`: Compression limit value
+* `non_len (default=None)`: Non-linear length parameter for gap
+
+#### Examples
+```py
+Node(0,0,0)    # Create Node at 0,0,0 with ID = 1(default)
+Node(1,1,1)    # Create Node at 1,1,1 with ID = 2(default)
+
+# Simple compression-only member
+comp1 = Element.Compression(1,2,stype=1)
+
+# Compression-only with tension limit and buckling limit
+comp2 = Element.Compression(1,2,stype=1,tens=27,t_limit=-15)
+
+# Gap element with initial gap
+gap1 = Element.Compression(3,4,stype=2,non_len=0.25)
+
+Node.create()
+Element.create()
+```
+
+### Subtypes
+
+#### 1. Compression-only (stype=1)
+- Transfers compression forces only
+- Can have allowable tension (`tens` parameter)
+- Can have compression limit (`t_limit` parameter)
+
+#### 2. Gap (stype=2)
+- Has initial gap defined by `non_len` parameter
+- Only active when compressed beyond gap length
+
 
 
 ----------------------------------------------------------------------------------------------------
