--- a/docs/Element/1D.md
+++ b/docs/Element/1D.md
@@ -189,12 +189,16 @@ A nested class within Element used to create tension-only elements, hooks, and c
 ### Object Attributes
 
 `ID`: Element ID  
-`TYPE`: Element type = <font color="red">'TENSTR'</font>  
-`MATL`: Material ID of the tension element  
-`SECT`: Section ID of the tension element  
+`TYPE`: Element type = <font color="red">'COMPTR'</font>  
+`MATL`: Material ID of the compression element  
+`SECT`: Section ID of the compression element  
 `NODE`: Nodes of element in list. eg: [1,2]   
-`ANGLE`: Beta angle of the tension element  
-`STYPE`: Subtype of tension element (1=Tension-only, 2=Hook, 3=Cable)  
+`ANGLE`: Beta angle of the compression element  
+`STYPE`: Subtype of compression element (1=Compression-only, 2=Gap)  
+`TENS`: Allowable tension or initial compression force  
+`T_LIMIT`: Compression limit value  
+`T_bLMT`: Compression limit flag (automatically set when T_LIMIT is provided)  
+`NON_LEN`: Non-linear length parameter (for Gap subtype)  
 
 ### Tension Element
 **<font color="green">`Element.Tension(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, id = 0, non_len = None, cable_type = None, tens = None, t_limit = None)`</font>**  
@@ -269,6 +273,10 @@ A nested class within Element used to create compression-only elements and gaps.
 `NODE`: Nodes of element in list. eg: [1,2]   
 `ANGLE`: Beta angle of the compression element  
 `STYPE`: Subtype of compression element (1=Compression-only, 2=Gap)  
+`TENS`: Allowable tension or initial compression force  
+`T_LIMIT`: Compression limit value  
+`T_bLMT`: Compression limit flag (automatically set when T_LIMIT is provided)  
+`NON_LEN`: Non-linear length parameter (for Gap subtype)  
 
 ### Compression Element
 **<font color="green">`Element.Compression(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, id = 0, tens = None, t_limit = None, non_len = None)`</font>**  
