--- a/docs/Element/1D.md
+++ b/docs/Element/1D.md
@@ -2,7 +2,7 @@
 
 ![MIDAS PYTHON](1D_banner.png)
 
-#### Creation Methods  
+### Creation Methods  
 There are three methods available to create 1D elements:
 
 * Single Element (Main Class) :  eg. `Truss` , `Beam`  
@@ -18,7 +18,7 @@ http://localhost:8000/Element/1D/
 ![SS](elem_1D_create.png)
 
 ## TRUSS
-
+---
 A nested class within Element used to create truss elements.
 
 ### Object Attributes
