--- a/docs/Element/3D.md
+++ b/docs/Element/3D.md
@@ -4,7 +4,7 @@
 
 
 ## SOLID
-
+---
 A nested class within Element used to create Solid elements.
 
 ### Object Attributes
@@ -30,46 +30,8 @@ Creates a Solid element.
 * `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.  
 
 #### Node Ordering
+![MIDAS PYTHON](elm_3d_nodeOrder.png)
 
-**Tetrahedral (4 nodes)**
-```
-Node order: [N1, N2, N3, N4]
-      N4
-     /|\
-    / | \
-   /  |  \
-  N1--+--N3
-   \  |  /
-    \ | /
-     \|/
-     N2
-```
-
-**Pentahedral (6 nodes)**
-```
-Node order: [N1, N2, N3, N4, N5, N6]
-     N6
-    /|\
-   / | \
-  N4-+-N5
-  |  |  |
-  |  N3 |
-  | /|\ |
-  |/ | \|
-  N1-+-N2
-```
-
-**Hexahedral (8 nodes)**
-```
-Node order: [N1, N2, N3, N4, N5, N6, N7, N8]
-    N8-------N7
-   /|        /|
-  N5-------N6 |
-  | |       | |
-  | N4------|-N3
-  |/        |/
-  N1-------N2
-```
 
 #### Examples
 ```py
