--- a/docs/Group/001sg.md
+++ b/docs/Group/001sg.md
@@ -1,8 +1,9 @@
-# STRUCTURE GROUPS
+# Structure Group
 
 A nested class within Group used to create and manage structure groups containing nodes and elements.
 
 ## Constructor
+---
 **<font color="green">`Group.Structure(name, nlist=[], elist=[])`</font>**
 
 Creates a structure group with specified name and optional node/element lists.
@@ -22,8 +23,8 @@ Creates a structure group with specified name and optional node/element lists.
 * `NLIST` (list): A list of node numbers belonging to this group.
 
 
-### Methods
-
+## Methods
+---
 #### <font style="font-size:0px">Group.Structure.</font>update
 Updates an existing structure group with new node/element lists.
 
@@ -89,6 +90,7 @@ Group.Structure.delete()
 
 
 ## Examples
+---
 ```py
 # Create nodes and elements first
 for i in range(3):
