--- a/docs/Group/002bg.md
+++ b/docs/Group/002bg.md
@@ -1,8 +1,9 @@
-# BOUNDARY GROUPS
+# Boundary Group
 
 A nested class within Group used to create and manage boundary groups.
 
 ## Constructor
+---
 **<font color="green">`Group.Boundary(name)`</font>**
 
 Creates a boundary group with specified name.
@@ -20,7 +21,7 @@ Creates a boundary group with specified name.
 
 
 ## Methods
-
+---
 #### json
 Returns JSON representation of all boundary groups.
 
@@ -67,6 +68,7 @@ Group.Boundary.delete()
 
 
 ## Examples
+---
 ```py
 # Create boundary groups
 bg1 = Group.Boundary("Support Group")
