--- a/docs/Group/003lg.md
+++ b/docs/Group/003lg.md
@@ -1,8 +1,9 @@
-# LOAD GROUPS
+# Load Group
 
 A nested class within Group used to create and manage load groups.
 
 ## Constructor
+---
 **<font color="green">`Group.Load(name)`</font>**
 
 Creates a load group with specified name.
@@ -19,7 +20,7 @@ Creates a load group with specified name.
 
 
 ## Methods
-
+---
 #### json
 Returns JSON representation of all load groups.
 
@@ -63,6 +64,7 @@ Group.Load.delete()
 
 
 ## Examples
+---
 ```py
 # Create load groups
 lg1 = Group.Load("Dead Load Group")
