--- a/docs/Group/004tg.md
+++ b/docs/Group/004tg.md
@@ -1,8 +1,9 @@
-# TENDON GROUPS
+# Tendon Group
 
 A nested class within Group used to create and manage tendon groups.
 
 ## Constructor
+---
 **<font color="green">`Group.Tendon(name)`</font>**
 
 Creates a tendon group with specified name.
@@ -18,7 +19,7 @@ Creates a tendon group with specified name.
 * `ID` (int): The ID of the tendon group.
 
 ## Methods
-
+---
 #### json
 Returns JSON representation of all tendon groups.
 
@@ -64,6 +65,7 @@ Group.Tendon.delete()
 
 
 ## Examples
+---
 ```py
 # Create tendon groups
 tg1 = Group.Tendon("PT Group 1")
