--- a/docs/Load/000sw.md
+++ b/docs/Load/000sw.md
@@ -1,8 +1,9 @@
-# SELF-WEIGHT LOAD
+# Self-Weight Load
 
 A nested class within Load used to create self-weight loads.
 
 ## Constructor
+---
 **<font color="green">`Load.SW(load_case, dir = "Z", value = -1, load_group = "")`</font>**
 
 Creates a self-weight load for the specified load case.
@@ -22,7 +23,7 @@ Creates a self-weight load for the specified load case.
 
 
 ## Methods
-
+---
 #### json
 Returns JSON representation of all self-weight loads.
 
@@ -52,10 +53,17 @@ Synchronizes self-weight loads from Civil NX.
 Load.SW.sync()
 ```
 
+#### delete
+Deletes all self-weight loads from both Python and Civil NX.
+
+```py
+Load.SW.delete()
+```
 
 
 
 ## Examples
+---
 ```py
 # Simple self-weight in Z direction
 for i in range(2):
