--- a/docs/Element/1D.md
+++ b/docs/Element/1D.md
@@ -34,7 +34,7 @@ A nested class within Element used to create truss elements.
 To create truss element we have total 3 methods :  
 
 ### 1. Truss
-**<font color="green">`Element.Truss(i:int, j:int, mat = 1, sect = 1, angle = 0, id = 0)`</font>**  
+**<font color="green">`Element.Truss(i:int, j:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0)`</font>**  
 Creates a truss between nodes `i` and `j`.
 
 #### Parameters
@@ -43,6 +43,7 @@ Creates a truss between nodes `i` and `j`.
 * `mat (default=1`: Material ID of the truss element
 * `sect (default=1)`: Section ID of the truss element
 * `angle (default=0)`: Beta angle of the truss element
+* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
 
 #### Examples
@@ -58,14 +59,14 @@ Element.create()
 
 
 ### 2. Truss.SE
-**<font color="green">`Element.Truss.SE(s_loc: list, e_loc: list, n: int = 1, mat, sect, angle, id)`</font>**  
+**<font color="green">`Element.Truss.SE(s_loc: list, e_loc: list, n: int = 1, mat, sect, angle, group, id)`</font>**  
 Creates `n` truss elements between start and end location.
 
 #### Parameters
 * `s_loc`: Start location. [x,y,z]
 * `e_loc`: End location. [x,y,z]
 * `n (default=1)`: Number of elements
-* `mat,sect,angle,id` : Same as Element.Truss() method
+* `mat,sect,angle,group,id` : Same as Element.Truss() method
 
 #### Examples
 ```py
@@ -76,7 +77,7 @@ Element.create()
 ```
 
 ### 3. Truss.SDL
-**<font color="green">`Element.Truss.SDL(s_loc: list, dir: list, l: float, n: int = 1, mat, sect, angle, id)`</font>**  
+**<font color="green">`Element.Truss.SDL(s_loc: list, dir: list, l: float, n: int = 1, mat, sect, angle, group, id)`</font>**  
 Creates `n` truss elements along a straight line defined by direction `dir` and length `l` starting at `s_loc`.
 
 #### Parameters
@@ -84,7 +85,7 @@ Creates `n` truss elements along a straight line defined by direction `dir` and 
 * `dir`: Direction vector [dx, dy, dz]
 * `l`: Total length of element
 * `n (default=1)`: Number of elements
-* `mat,sect,angle,id` : Same as Element.Truss() method
+* `mat,sect,angle,group,id` : Same as Element.Truss() method
 
 #### Examples
 ```py
@@ -118,7 +119,7 @@ A nested class within Element used to create Beam elements.
 To create Beam element we have total 3 methods :  
 
 ### 1. Beam
-**<font color="green">`Element.Beam(i:int, j:int, mat = 1, sect = 1, angle = 0, id = 0)`</font>**  
+**<font color="green">`Element.Beam(i:int, j:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0)`</font>**  
 Creates a Beam between nodes `i` and `j`.
 
 #### Parameters
@@ -127,6 +128,7 @@ Creates a Beam between nodes `i` and `j`.
 * `mat (default=1`: Material ID of the Beam element
 * `sect (default=1)`: Section ID of the Beam element
 * `angle (default=0)`: Beta angle of the Beam element
+* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
 
 #### Examples
@@ -142,14 +144,14 @@ Element.create()
 
 
 ### 2. Beam.SE
-**<font color="green">`Element.Beam.SE(s_loc: list, e_loc: list, n: int = 1, mat, sect, angle, id)`</font>**  
+**<font color="green">`Element.Beam.SE(s_loc: list, e_loc: list, n: int = 1, mat, sect, angle, group, id)`</font>**  
 Creates `n` Beam elements between start and end location.
 
 #### Parameters
 * `s_loc`: Start location. [x,y,z]
 * `e_loc`: End location. [x,y,z]
 * `n (default=1)`: Number of elements
-* `mat,sect,angle,id` : Same as Element.Beam() method
+* `mat,sect,angle,group,id` : Same as Element.Beam() method
 
 #### Examples
 ```py
@@ -160,7 +162,7 @@ Element.create()
 ```
 
 ### 3. Beam.SDL
-**<font color="green">`Element.Beam.SDL(s_loc: list, dir: list, l: float, n: int = 1, mat, sect, angle, id)`</font>**  
+**<font color="green">`Element.Beam.SDL(s_loc: list, dir: list, l: float, n: int = 1, mat, sect, angle, group, id)`</font>**  
 Creates `n` Beam elements along a straight line defined by direction `dir` and length `l` starting at `s_loc`.
 
 #### Parameters
@@ -168,7 +170,7 @@ Creates `n` Beam elements along a straight line defined by direction `dir` and l
 * `dir`: Direction vector [dx, dy, dz]
 * `l`: Total length of element
 * `n (default=1)`: Number of elements
-* `mat,sect,angle,id` : Same as Element.Beam() method
+* `mat,sect,angle,group,id` : Same as Element.Beam() method
 
 #### Examples
 ```py
@@ -201,7 +203,7 @@ A nested class within Element used to create tension-only elements, hooks, and c
 `NON_LEN`: Non-linear length parameter (for Gap subtype)  
 
 ### Tension Element
-**<font color="green">`Element.Tension(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, id = 0, non_len = None, cable_type = None, tens = None, t_limit = None)`</font>**  
+**<font color="green">`Element.Tension(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0, non_len = None, cable_type = None, tens = None, t_limit = None)`</font>**  
 Creates a tension element between nodes `i` and `j`.
 
 #### Parameters
@@ -211,6 +213,7 @@ Creates a tension element between nodes `i` and `j`.
 * `mat (default=1)`: Material ID of the tension element
 * `sect (default=1)`: Section ID of the tension element
 * `angle (default=0)`: Beta angle of the tension element
+* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.
 * `non_len (default=None)`: Non-linear length parameter for Hook/Cable
 * `cable_type (default=None)`: Cable type for stype=3 (1=Pretension, 2=Horizontal, 3=Lu)
@@ -279,7 +282,7 @@ A nested class within Element used to create compression-only elements and gaps.
 `NON_LEN`: Non-linear length parameter (for Gap subtype)  
 
 ### Compression Element
-**<font color="green">`Element.Compression(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, id = 0, tens = None, t_limit = None, non_len = None)`</font>**  
+**<font color="green">`Element.Compression(i:int, j:int, stype:int, mat = 1, sect = 1, angle = 0, group = '' , id = 0, tens = None, t_limit = None, non_len = None)`</font>**  
 Creates a compression element between nodes `i` and `j`.
 
 #### Parameters
@@ -289,6 +292,7 @@ Creates a compression element between nodes `i` and `j`.
 * `mat (default=1)`: Material ID of the compression element
 * `sect (default=1)`: Section ID of the compression element
 * `angle (default=0)`: Beta angle of the compression element
+* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.
 * `tens (default=None)`: Allowable tension or initial compression force
 * `t_limit (default=None)`: Compression limit value
