--- a/docs/Element/2D.md
+++ b/docs/Element/2D.md
@@ -23,7 +23,7 @@ A nested class within Element used to create Plate elements.
 4 : Thin w Drilling dof 
 
 ### Constructor
-**<font color="green">`Element.Plate(nodes:list, stype:int=1, mat = 1, sect = 1, angle = 0, id = 0)`</font>**  
+**<font color="green">`Element.Plate(nodes:list, stype:int=1, mat = 1, sect = 1, angle = 0, group = '' , id = 0)`</font>**  
 Creates a Plate element.
 
 #### Parameters
@@ -37,6 +37,7 @@ Creates a Plate element.
 * `mat (default=1)`: Material ID of the Plate element  
 * `sect (default=1)`: Thickness ID of the Plate element  
 * `angle (default=0)`: Beta angle of the Plate element  
+* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.  
 
 #### Examples
