--- a/docs/Element/1D.md
+++ b/docs/Element/1D.md
@@ -43,7 +43,7 @@ Creates a truss between nodes `i` and `j`.
 * `mat (default=1`: Material ID of the truss element
 * `sect (default=1)`: Section ID of the truss element
 * `angle (default=0)`: Beta angle of the truss element
-* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
+* `group (default='')`: Structure group of the element and its nodes (can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
 
 #### Examples
@@ -128,7 +128,7 @@ Creates a Beam between nodes `i` and `j`.
 * `mat (default=1`: Material ID of the Beam element
 * `sect (default=1)`: Section ID of the Beam element
 * `angle (default=0)`: Beta angle of the Beam element
-* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
+* `group (default='')`: Structure group of the element and its nodes(can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.
 
 #### Examples
@@ -213,7 +213,7 @@ Creates a tension element between nodes `i` and `j`.
 * `mat (default=1)`: Material ID of the tension element
 * `sect (default=1)`: Section ID of the tension element
 * `angle (default=0)`: Beta angle of the tension element
-* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
+* `group (default='')`: Structure group of the element and its nodes (can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.
 * `non_len (default=None)`: Non-linear length parameter for Hook/Cable
 * `cable_type (default=None)`: Cable type for stype=3 (1=Pretension, 2=Horizontal, 3=Lu)
@@ -292,7 +292,7 @@ Creates a compression element between nodes `i` and `j`.
 * `mat (default=1)`: Material ID of the compression element
 * `sect (default=1)`: Section ID of the compression element
 * `angle (default=0)`: Beta angle of the compression element
-* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
+* `group (default='')`: Structure group of the element and its nodes (can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.
 * `tens (default=None)`: Allowable tension or initial compression force
 * `t_limit (default=None)`: Compression limit value
