--- a/docs/Element/2D.md
+++ b/docs/Element/2D.md
@@ -15,8 +15,7 @@ A nested class within Element used to create Plate elements.
 `SECT`: Section ID of the beam element  
 `NODE`: Nodes of element in list. eg: [1,2,3,4]   
 `ANGLE`: Beta angle of the beam element  
-`STYPE`: Type of Plate element  
-
+`STYPE`: Type of Plate element   
 &emsp;&emsp;&emsp;&emsp;1 : Thick <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
 2 : Thin  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
 3 : Thick w Drilling dof  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
@@ -37,7 +36,7 @@ Creates a Plate element.
 * `mat (default=1)`: Material ID of the Plate element  
 * `sect (default=1)`: Thickness ID of the Plate element  
 * `angle (default=0)`: Beta angle of the Plate element  
-* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
+* `group (default='')`: Structure group of the element and its nodes(can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID.   If **0**, ID will be auto-assigned.  
 
 #### Examples
