--- a/docs/Element/3D.md
+++ b/docs/Element/3D.md
@@ -27,7 +27,7 @@ Creates a Solid element.
   - **8 nodes**: Hexahedral (brick) element
 * `mat (default=1)`: Material ID of the Solid element  
 * `sect (default=0)`: Section ID of the Solid element  
-* `group (default='')`: Structure group of the element (can be str or list eg. 'SG' or ['SG1','SG2'])
+* `group (default='')`: Structure group of the element and its nodes (can be str or list eg. 'SG' or ['SG1','SG2'])
 * `id (default=0)`: Manually assign an ID. If **0**, ID will be auto-assigned.  
 
 #### Node Ordering
