--- a/docs/Group/001sg.md
+++ b/docs/Group/001sg.md
@@ -23,6 +23,11 @@ Creates a structure group with specified name and optional node/element lists.
 * `NLIST` (list): A list of node numbers belonging to this group.
 
 
+### Retrieve List
+* `elemsInGroup(groupName)` : Return Element IDs list in a structure group
+* `nodesInGroup(groupName)` : Return Node IDs list in a structure group
+
+
 ## Methods
 ---
 #### <font style="font-size:0px">Group.Structure.</font>update
