List support for inGroup
Can use list / unique

--- a/docs/Group/001sg.md
+++ b/docs/Group/001sg.md
@@ -24,8 +24,13 @@ Creates a structure group with specified name and optional node/element lists.
 
 
 ### Retrieve List
-* `elemsInGroup(groupName)` : Return Element IDs list in a structure group
-* `nodesInGroup(groupName)` : Return Node IDs list in a structure group
+* `elemsInGroup(groupName: str | list, unique: bool = True)` : Return Element IDs list in a structure group/groups   
+
+* `nodesInGroup(groupName: str | list, unique: bool = True)` : Return Node IDs list in a structure group
+
+#### Parameters
+* `groupName` (str or list) : The name of the structure group or a list of group names.
+* `unique` (bool, default: True) : Determines whether to remove duplicate Node IDs from the list.
 
 
 ## Methods
