--- a/docs/Element/1D.md
+++ b/docs/Element/1D.md
@@ -180,9 +180,37 @@ Node.create()
 Element.create()
 ```
 
+### 4. Beam.PLine
+**<font color="green">`Element.Beam.PLine(points_loc: list, n_div:int=0,deg:int=1,includePoint:bool=True, mat, sect, angle, group, id)`</font>**  
+Creates equal `n_div` Beam elements passing through curve defined by `points_loc`.   
+It allows dividing a curve into equal-length segments while providing an option to include the original input points (even if they don’t coincide with the division points).
+
+#### Parameters
+* `points_loc`: List of control points defining the curve. [[x1, y1, z1],[x2, y2, z2],...]
+* `n_div`: No. of beam elements to be generated. If `n_div` = 0 , no interpolation will be considered. 
+* `deg`: Degree of interpolation curve.   
+&emsp;&emsp;&emsp;&emsp;
+1 : Linear <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+2 : Quadratic  <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+3 : Cubic
+* `includePoint`: Whether to include original input points in the final curve.   
+&emsp;&emsp;&emsp;&emsp;
+• True: Original points always appear in the mesh. <font color="orange">&nbsp;&nbsp;|&nbsp;&nbsp;</font> 
+• False: Only equal subdivisions are used.
+* `mat,sect,angle,group,id` : Same as Element.Beam() method
+
+
+#### Examples  
+
+```py
+pts = [[0,0,0],[10,0,0],[20,5,0],[40,-10,0],[50,0,0],[60,0,0]]
+Element.Beam.PLine(pts,100,1,True)
+
+Node.create()
+Element.create()
+```  
+
 ----------------------------------------------------------------------------------------------------
-
-
 
 ## TENSION
 
